# grpc_helloworld

./: CMakeLists.txt  README.md
VideoFrameTransferProject/: CMakeLists.txt  JQueue.cpp  JQueue.h  VideoClient.cpp  VideoServer.cpp
VideoFrameTransferProject/protos/: video_service.proto
hw_gRPC/: CMakeLists.txt  CMakeSettings.json  greeter_server.cc
